CSS fixes - Fix large font in ul li ul's - Fix too dark color in CodeRays

--- a/app/assets/stylesheets/yaml.customization.css.scss
+++ b/app/assets/stylesheets/yaml.customization.css.scss
@@ -14,6 +14,10 @@ body {
 
 p, ul {
   font-size: 1.15em;
+
+  ul {
+    font-size: 1em;
+  }
 }
 
 header {
